@@ -533,51 +533,4 @@ public class Hierarchy
         else
             return target;
     }
-
-
-  /* generating dot format for plotting */
-  public void toDotFile() {
-
-    String filename = "hierarchy";
-
-    DotGraph canvas = new DotGraph(filename);
-
-    canvas.setGraphLabel("Class Hierarchy");
-    canvas.setPageSize(8.5, 11.0); // set graph size to 8x11 inches
-    canvas.setNodeShape(DotGraphConstants.NODE_SHAPE_BOX);
-	canvas.setGraphAttribute("rankdir", "LR");
-	
-    Chain allclasses = Scene.v().getClasses();
-
-    Iterator classesIt = allclasses.iterator();
-    while (classesIt.hasNext()){
-      SootClass cls = (SootClass)classesIt.next();
-      if (cls.isInterface()) {
-	Iterator subinterfacesIt = getDirectSubinterfacesOf(cls).iterator();
-	while (subinterfacesIt.hasNext()){
-	  SootClass subinterface = (SootClass)subinterfacesIt.next();
-	  DotGraphEdge edge = canvas.drawEdge(cls.getName(), 
-					      subinterface.getName());
-	  edge.setStyle(DotGraphConstants.EDGE_STYLE_DOTTED);
-	}
-
-	Iterator implementersIt = getDirectImplementersOf(cls).iterator();
-	while (implementersIt.hasNext()) {
-	  SootClass implementer = (SootClass)implementersIt.next();
-	  DotGraphEdge edge = canvas.drawEdge(cls.getName(),
-					      implementer.getName());
-	  edge.setStyle(DotGraphConstants.EDGE_STYLE_DOTTED);
-	}
-      } else {
-	Iterator subclassesIt = getDirectSubclassesOf(cls).iterator();
-	while (subclassesIt.hasNext()) {
-	  SootClass subclass = (SootClass)subclassesIt.next();
-	  canvas.drawEdge(cls.getName(), subclass.getName());
-	}
-      }
-    }
-
-    canvas.plot();
-  } 
-
 }
